tests/sksl/errors/OverflowUintLiteral.dsl.glsl
### Compilation failed:

error: integer is too large: 4294967296
error: expected a declaration, but found ';'
error: integer is out of range for type 'uint': -1

error: integer is out of range for type 'uint': -1

4 errors
